[Add]フラッシュメッセージ

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,6 +45,7 @@
     </header>
     
     <main class="mb-auto">
+      <p class="notice"><%= flash[:notice] %></p>
     <%= yield %>
     </main>
     
